# winlong

./: .env.example  .gitignore  README.md  start-local.sh
.github/workflows/: ci.yml  deploy-web.yml
apps/api/: pyproject.toml
apps/api/app/: config.py  db.py  main.py  schemas.py
apps/api/app/data/: asset_registry.py  seed_payload.py
apps/api/app/services/: market_sync_service.py  pool_scoring_service.py  sync_runtime.py  winlong_service.py
apps/api/tests/: test_api.py
apps/api/winlong_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/web/: .env.local  next.config.mjs  package-lock.json  package.json  tsconfig.json  vitest.config.ts
apps/web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/src/app/coin/[symbol]/: page.tsx
apps/web/src/app/status/: page.tsx
apps/web/src/components/charts/: factor-breakdown-chart.tsx  factor-radar.tsx  price-chart.tsx  score-history-chart.tsx
apps/web/src/components/coin/: coin-hero.tsx  derivatives-panel.tsx  factor-detail-groups.tsx
apps/web/src/components/layout/: bottom-nav.tsx  header.tsx  status-bar.tsx
apps/web/src/components/pool/: coin-card.tsx  factor-mini-bars.tsx  pool-helpers.ts  pool-summary-card.tsx  pool-tabs.tsx  rank-badge.tsx  ranking-explorer.test.tsx  ranking-explorer.tsx  ranking-table.tsx  score-bar.tsx
apps/web/src/components/status/: status-dashboard.tsx
apps/web/src/lib/: api.test.ts  api.ts  formatters.test.ts  formatters.ts  pool-meta.test.ts  pool-meta.ts  types.test.ts  types.ts
apps/web/src/store/: watchlist-store.ts
apps/web/src/test/: setup.ts
